--- a/Prototype/proto.css
+++ b/Prototype/proto.css
@@ -1,10 +1,12 @@
 #chart-container{
-    width:550px;
-    height:550px;
+    width:400px;
+    height:400px;
     display: grid;
     grid-template-rows: repeat(4, 100px);
     grid-template-columns: repeat(4, 100px);
-    gap: 10px;
+    gap: 0px;
+    margin-left: auto;
+    margin-right: auto;
  }
 
 .big-boy{
