--- a/Prototype/proto.css
+++ b/Prototype/proto.css
@@ -1,12 +1,17 @@
+body{
+   display: grid;
+   grid-template-columns: repeat(3,1fr);
+   grid-template-rows: 100vh;
+   grid-template-areas: ". chart images";
+}
 #chart-container{
+    grid-area: chart;
     width:400px;
     height:400px;
     display: grid;
     grid-template-rows: repeat(4, 100px);
     grid-template-columns: repeat(4, 100px);
     gap: 0px;
-    margin-left: auto;
-    margin-right: auto;
  }
 
 .big-boy{
@@ -100,5 +105,41 @@
     background:#926e28;
  }
 
+ #add-image{
+   grid-area: images;
+   border: 5px solid black;
+ } 
 
+ #image-list, .image-url, .image-sliders{
+   border: 5px solid #606060;
+   list-style: none;
+   padding: 2px;
+ }
+
+ .image-container{
+    display: grid;
+    grid-template-rows: 25% 75%;
+    grid-template-columns: 40% 60%;
+    grid-template-areas: 
+    'url url'
+    'image sliders'; 
+    gap: 2px;
+ }
+
+ .image-url{
+    grid-area: url;
+ }
+
+ .image-sliders{
+    grid-area: sliders;
+ }
+
+ .image{
+   grid-area: image; 
+   border: 5px solid #606060;
+   padding: 12px;
+   width: 100px;
+   height: 100px;
+ }
+ 
 
